--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "dev": "turbo run dev --no-cache --continue",
     "lint": "turbo run lint",
     "clean": "turbo run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "storybook": "yarn workspace @poc-lib/components storybook",
     "changeset": "changeset",
     "version-packages": "changeset version",
-    "release": "turbo run build --filter=docs^... && changeset publish"
+    "release": "turbo run build --filter=frontend^... && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.25.2",
+    "@poc-lib/tsconfig": "*",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
-    "tsconfig": "*",
     "turbo": "latest"
   },
   "packageManager": "yarn@1.22.19",
