--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -19,9 +19,9 @@
   },
   "devDependencies": {
     "@poc-lib/eslint-config": "*",
-    "@poc-lib/tsconfig": "*",
     "@poc-lib/icons": "*",
     "@poc-lib/theme": "*",
+    "@poc-lib/tsconfig": "*",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -32,7 +32,9 @@
     "@storybook/testing-library": "^0.2.2",
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "@vanilla-extract/vite-plugin": "^3.9.1",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "mini-css-extract-plugin": "^2.7.6",
     "react": "^17",
     "react-dom": "^17",
     "storybook": "^7.5.3",
@@ -48,5 +50,9 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@vanilla-extract/recipes": "^0.5.1",
+    "@vanilla-extract/css": "^1.14.0"
   }
 }
