--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "resolveJsonModule": true
   },
-  "include": ["."],
+  "include": [".", "../components/src/components/ThemeProvider/theme.css.ts"],
   "exclude": ["dist", "build", "node_modules"]
 }
