--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,7 +14,7 @@
     "react-dom": "^18.2.0",
     "@poc-lib/components": "*",
     "@poc-lib/icons": "*",
-    "@poc-lib/theme": "*"
+    "@poc-lib/tokens": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
