--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev --no-cache --continue",
     "lint": "turbo run lint",
-    "clean": "turbo run clean && rm -rf node_modules",
+    "clean": "turbo run clean && rimraf node_modules",
     "storybook": "yarn workspace @poc-lib/components storybook",
     "changeset": "changeset",
     "version-packages": "changeset version",
@@ -15,6 +15,7 @@
     "@poc-lib/tsconfig": "*",
     "eslint": "^8.48.0",
     "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "turbo": "latest"
   },
   "packageManager": "yarn@1.22.19",
