--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,18 +10,20 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
-    "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
+    "build": "rollup -c --bundleConfigAsCjs",
     "lint": "eslint src/ --fix",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "clean": "rimraf .turbo && rimraf node_modules && rimraf dist",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@poc-lib/eslint-config": "*",
-    "@poc-lib/tsconfig": "*",
     "@poc-lib/icons": "*",
-    "@poc-lib/theme": "*",
+    "@poc-lib/tokens": "*",
+    "@poc-lib/tsconfig": "*",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@storybook/addon-essentials": "^7.5.3",
     "@storybook/addon-interactions": "^7.5.3",
     "@storybook/addon-links": "^7.5.3",
@@ -33,16 +35,21 @@
     "@types/react": "^17",
     "@types/react-dom": "^17",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "autoprefixer": "^10.4.16",
     "react": "^17",
     "react-dom": "^17",
+    "rollup": "^4.5.0",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "storybook": "^7.5.3",
-    "tsup": "^6.0.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "peerDependencies": {
     "@poc-lib/icons": "*",
-    "@poc-lib/theme": "*",
+    "@poc-lib/tokens": "*",
     "react": "^17",
     "react-dom": "^17"
   },
