--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -13,7 +13,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "dev": "tsup src/index.ts --format esm,cjs --watch --dts --external react",
     "lint": "eslint src/ --fix",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "clean": "rimraf .turbo && rimraf node_modules && rimraf dist",
     "generate-icons": "yarn svgr --out-dir src/components src/assets --title-prop=true --typescript --icon --replace-attr-values '#141414=currentColor'"
   },
   "devDependencies": {
