--- a/packages/tokens/tsconfig.json
+++ b/packages/tokens/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "resolveJsonModule": true
   },
-  "include": ["."],
+  "include": ["src"],
   "exclude": ["dist", "build", "node_modules"]
 }
