example with styled components

--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "@poc-lib/tsconfig/react-library.json",
-  "include": ["src", "index.d.ts"],
+  "include": ["src"],
   "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "declaration": true,
     "declarationDir": "types",
-    "emitDeclarationOnly": true
+    "emitDeclarationOnly": true,
+    "resolveJsonModule": true,
+    "jsx": "react-jsx"
   }
 }
