--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@poc-lib/components": "*",
     "@poc-lib/icons": "*",
-    "@poc-lib/tokens": "*"
+    "@poc-lib/tokens": "*",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@poc-lib/eslint-config": "*",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
