--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,7 +10,7 @@
     "dist/**"
   ],
   "scripts": {
-    "build": "rollup -c --bundleConfigAsCjs",
+    "build": "tsup src/index.ts --format esm,cjs --dts --external react",
     "lint": "eslint src/ --fix",
     "clean": "rimraf .turbo && rimraf node_modules && rimraf dist",
     "storybook": "storybook dev -p 6006",
@@ -36,24 +36,26 @@
     "@types/react-dom": "^17",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
-    "react": "^17",
-    "react-dom": "^17",
-    "rollup": "^4.5.0",
-    "rollup-plugin-dts": "^6.1.0",
-    "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-terser": "^7.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook": "^7.5.3",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.5"
+    "tsup": "^8.0.0",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "@poc-lib/icons": "*",
     "@poc-lib/tokens": "*",
-    "react": "^17",
-    "react-dom": "^17"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react/dom": "^18.2.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "styled-components": "^6.1.1"
   }
 }
