--- a/packages/tokens/config.json
+++ b/packages/tokens/config.json
@@ -11,18 +11,10 @@
       {
         "format": "scss/variables",
         "destination": "variables.scss"
-      }]
-    },
-    "ts": {
-      "transformGroup": "js",
-      "buildPath": "dist/",
-      "files": [{
-        "format": "javascript/es6",
-        "destination": "variables.js"
       },
       {
-        "format": "typescript/es6-declarations",
-        "destination": "variables.d.ts"
+        "format": "json/nested",
+        "destination": "variables.json"
       }]
     }
   }
