--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -34,6 +34,8 @@
     "@storybook/testing-library": "^0.2.2",
     "@types/react": "^17",
     "@types/react-dom": "^17",
+    "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/rollup-plugin": "^1.3.0",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "react": "^17",
