--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,7 +35,9 @@
     "@types/react": "^17",
     "@types/react-dom": "^17",
     "@vanilla-extract/css": "^1.14.0",
+    "@vanilla-extract/recipes": "^0.5.1",
     "@vanilla-extract/rollup-plugin": "^1.3.0",
+    "@vanilla-extract/vite-plugin": "^3.9.2",
     "@vitejs/plugin-react-swc": "^3.3.2",
     "autoprefixer": "^10.4.16",
     "react": "^17",
